# tree-sitter-isle

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-isle.h  tree-sitter-isle.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_isle/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterIsleTests/: TreeSitterIsleTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: core-fail.txt  core-pass.txt  verification-fail.txt  verification-pass.txt
test/highlight/: core.isle  verification.isle
